samples/_failures_safe/1761129840_773745_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fcdea136.c: In function ‘main’:
./samples/SAFE/__tmp_fcdea136.c:142:5: error: expected expression at end of input
  142 |     if (len == 0)
      |     ^~
./samples/SAFE/__tmp_fcdea136.c:142:5: error: expected declaration or statement at end of input
